objects/EUR_CRM_Contract_Audit_Activity_Item__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Audit_Item_Previously_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audit Item Previously Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Compliance_Complete_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance / Complete Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Audit_Activity__c</fullName>
        <label>Contract Audit Activity</label>
        <referenceTo>EUR_CRM_Contract_Audit_Activity__c</referenceTo>
        <relationshipName>EUR_CRM_Contract_Audit_Activity_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Item_BQS__c</fullName>
        <formula>EUR_CRM_Contract_Product_Item__r.EUR_CRM_Brand_Quality_Size__r.Name</formula>
        <label>Contract Product Item - BQS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Item_BQ__c</fullName>
        <formula>EUR_CRM_Contract_Product_Item__r.EUR_CRM_Brand_Quality__r.Name</formula>
        <label>Contract Product Item - Brand-Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Item_Brand__c</fullName>
        <formula>EUR_CRM_Contract_Product_Item__r.EUR_CRM_Brand__r.Name</formula>
        <label>Contract Product Item - Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Item_SKU__c</fullName>
        <formula>EUR_CRM_Contract_Product_Item__r.EUR_CRM_SKU__r.Name</formula>
        <label>Contract Product Item - SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contract_Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Product Item</label>
        <referenceTo>EUR_CRM_Contract_Product_Item__c</referenceTo>
        <relationshipName>EUR_CRM_Contract_Audit_Activity_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contract Audit Activity Item (EU)</label>
    <listViews>
        <fullName>EUR_PT_All_ContractAuditActivityI_View</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Compliance_Complete_Check__c</columns>
        <columns>EUR_CRM_Audit_Item_Previously_Completed__c</columns>
        <columns>EUR_CRM_Contract_Product_Item__c</columns>
        <columns>EUR_CRM_Contract_Product_Item_Brand__c</columns>
        <columns>EUR_CRM_Contract_Product_Item_BQ__c</columns>
        <columns>EUR_CRM_Contract_Product_Item_BQS__c</columns>
        <columns>EUR_CRM_Contract_Product_Item_SKU__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Contract_Audit_Activity_Item__c.EUR_PT_Contract_Audit_Activity_Item_Type</value>
        </filters>
        <label>EUR PT All ContractAuditActivityI  View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CAAI-{0000000000}</displayFormat>
        <label>Contract Audit Activity Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Audit Activity Item (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DK_Contract_Audit_Activity_Item_Type</fullName>
        <active>true</active>
        <description>Record Type for DK Contract Audit Activity Item Type</description>
        <label>EUR DK Contract Audit Activity Item Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Contract_Audit_Activity_Item_Type</fullName>
        <active>true</active>
        <label>EUR FI Contract Audit Activity Item Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Contract_Audit_Activity_Item_Type</fullName>
        <active>true</active>
        <label>EUR PT Contract Audit Activity Item Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Contract_Audit_Activity_Item_Type</fullName>
        <active>true</active>
        <label>EUR ZA Contract Audit Activity Item Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>